# wavediff-jax

./: .gitmodules  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: data.md  index.md  metrics.md  models.md  optics.md  plotting.md  sims.md  training.md  utils.md
docs/architecture/: design.md  migration.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: configuration.md  data.md  evaluation.md  models.md  simulation.md  training.md
src/wavediff_jax/: __init__.py
src/wavediff_jax/data/: preprocessing.py
src/wavediff_jax/metrics/: __init__.py  metrics.py  metrics_interface.py
src/wavediff_jax/models/: ground_truth.py  layers.py  parametric.py  physical_polychromatic.py  registry.py  semiparametric.py
src/wavediff_jax/optics/: __init__.py  diffraction.py  interpolation.py  obscurations.py  zernike.py
src/wavediff_jax/plotting/: plots_interface.py
src/wavediff_jax/sims/: psf_simulator.py  spatial_varying_psf.py
src/wavediff_jax/tests/: conftest.py
src/wavediff_jax/tests/test_data/: test_preprocessing.py
src/wavediff_jax/tests/test_metrics/: test_metrics.py
src/wavediff_jax/tests/test_models/: test_layers.py  test_models.py
src/wavediff_jax/tests/test_optics/: test_diffraction.py  test_interpolation.py  test_zernike.py
src/wavediff_jax/training/: __init__.py  callbacks.py  losses.py  train_utils.py  trainer.py
src/wavediff_jax/utils/: ccd_misalignments.py  centroids.py  config.py  io.py  math_utils.py  preprocessing.py
(+6 files in other folders)
