[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavediff-jax"
version = "0.1.0"
description = "JAX reimplementation of the WaveDiff differentiable PSF modelling framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "optax>=0.1.7",
    "jaxtyping>=0.2.20",
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
metrics = ["galsim>=2.4"]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "galsim>=2.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/wavediff_jax/tests"]
addopts = "-v"
